fix alignleft/right/center
- WordPress now handles these as long as content has a class of
  is-layout-flow/constrained

--- a/wp-content/themes/lax/style.css
+++ b/wp-content/themes/lax/style.css
@@ -892,21 +892,6 @@ a.btn {
 
 /*--------------- Generic -----------------------*/
 
-/* next 3 from Wordpress */
-.alignleft {
-	float: left;
-	margin-right: 1.5em;
-}
-.alignright {
-	float: right;
-	margin-left: 1.5em;
-}
-.aligncenter {
-	clear: both;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-}
 /* have to override things like ".table-data thead th", so use important */
 .left {
 	text-align: left !important;
